练习写作！！！也是练习说话

--- a/docs/thinking/article/2022.1.11-vue3-todoList-summary.md
+++ b/docs/thinking/article/2022.1.11-vue3-todoList-summary.md
@@ -1,7 +1,7 @@
 # vue3的todoList总结
 
 ## 从空间上
-从空间上，比较容易有思路，按着目录结构讲解就可以了。
+从空间上，从上到下
 
 `src/components`目录下遇到的坑
 ```js
@@ -32,6 +32,7 @@ const routes = [
 放页面
 
 ## 使用到的API
+4个
 ```js
 defineEmits
 
