--- a/docs/thinking/article/2021.1.11-the-little-red-writing-book-exercise.md
+++ b/docs/thinking/article/2021.1.11-the-little-red-writing-book-exercise.md
@@ -2,7 +2,7 @@
 
 ## 1结构
 
-### 1.1 开门见山写作法
+### 1.1 开门见山
 
 写博客，技术文章，不要和读者玩躲猫猫的游戏，让读者猜测你到底在说什么。
 
@@ -15,4 +15,49 @@
     小红，你知道吗，在xx地点，然后左转，然后你会看见一个理发店，就在它的对面，是一个快递点，你能帮我去取个快递吗？
 ```
 
-### 
+### 1.2 分解事物
+把主题分解成二到四个主要部分，然后运用引导句。
+
+引导句与主题句；
+
+把主题分成二到四个主要类别后，接下来你就要详细阐述这些观点了。
+在这里不妨考虑使用引导句，它类似主题句，不同的是主题句归纳的是文章或报告中一个
+单独段落的内容，而引导句总结的是一整篇文章或报告的内容。将引导句放在文章开头以提示接下来的内容，突出将要讨论的事项
+以及这些事项的讨论顺序。
+
+例子：
+```
+引导句：
+
+我将通过详述个人和职业生涯的三个特殊的转折点，来呈现我是个什么样的人：
+凭借曲棍球奖学金上大学时期、
+与维和不对共同度过的一年、
+入职伦敦一家商贸企业期间
+
+基于最近调查所得信息，本报告概述了我们公司面临的三大问题：
+员工流失、
+店铺盗窃和低水平客户服务
+```
+
+经典的“五段”写作法可以用一段话概述任意文章。（？？啥意思，没懂）
+
+经典的“五段”写作法
+```
+引言
+    颜色让这个世界明亮、饱满。我最喜欢的颜色是绿色，蓝色和黄色。每一种颜色与我而言都很特殊。
+____________________________________________________。
+
+正文
+    绿色就像覆盖着大地的青草。___________________________________
+_______________________________________________________________
+
+    蓝色就像高悬于上的天空。_____________________________________
+_______________________________________________________________
+
+    黄色就像光芒四射的太阳。_____________________________________
+_______________________________________________________________
+
+结语
+    绿色是所有这些颜色中最有意思的，甚至蓝色和黄色混合起来就能形成绿色。
+________________________________________________________________
+```
