子字符串频次

--- a/docs/thinking/article/2022.1.17-js-advanced.md
+++ b/docs/thinking/article/2022.1.17-js-advanced.md
@@ -246,3 +246,151 @@ _comma(12300)
     </body>
 </html>
 ```
+## 动态列表渲染
+请补全JavaScript代码，将预设代码中的"people"数组渲染在页面中。实现下面的列表：
+牛油1号 20岁
+牛油2号 21岁
+牛油3号 19岁
+```html
+    <body>
+        <ul></ul>
+
+        <script>
+            var people = [
+                { name: '牛油1号', id: 1, age: 20 },
+                { name: '牛油2号', id: 2, age: 21 },
+                { name: '牛油3号', id: 3, age: 19 },
+            ]
+            var ul = document.querySelector('ul');
+            // 补全代码
+            ul.innerTHML = people
+        </script>
+    </body>
+```
+
+## 模板字符串
+
+请补全JavaScript代码，实现以下功能：
+1. 根据已有的person对象的注册时间求出距离当前时间的天数（天数向下取整）。
+2. 将获得的天数和person数据拼接成字符串，作为h2标签的内容。
+注意：使用模板字符串进行字符串拼接，字符串最终内容如：尊贵的牛客网2级用户小丽您好，您已经注册牛客网3天啦~
+```html
+    <body>
+        <h2></h2>
+
+        <script>
+            var person = {
+                level: '2',
+                name: '小丽',
+                registTime: '2021-11-01',
+            }
+            var h2 = document.querySelector('h2');
+            // 补全代码
+            
+        </script>
+    </body>
+```
+
+## 类继承
+请补全JavaScript代码，完成类的继承。要求如下：
+1. "Chinese"类继承于"Human"类
+2. "Human"类实现一个函数"getName"，返回该实例的"name"属性
+3. "Chinese"类构造函数有两个参数，分别为"name"、"age"
+4. "Chinese"类实现一个函数"getAge"，返回该实例的"age"属性
+
+```html
+    <body>
+    	
+        <script type="text/javascript">
+            class Human {
+                constructor(name) {
+                    this.name = name
+                    this.kingdom = 'animal'
+                    this.color = ['yellow', 'white', 'brown', 'black']
+                }
+                // 补全代码
+                
+            }
+
+            // 补全代码
+            class Chinese {
+                
+            }
+        </script>
+    </body>
+```
+
+## 参数解析器
+请补全JavaScript代码，要求将字符串参数URL中的参数解析并以对象的形式返回。
+示例1
+输入：
+getParams('https://nowcoder.com/online?id=1&salas=1000')
+复制
+输出：
+{id:1, salas: 100}
+```html
+        <script>
+            const _getParams = (url) => {
+                // 补全代码
+                let obj = {}
+                url.split('?')[1].split('&').forEach(item=>{
+                    let key = item.split('=')[0]
+                    let value = item.split('=')[1]
+                    obj[key] = value
+                })
+                return obj;
+            }
+        </script>
+```
+
+## 生成页码
+请补全JavaScript代码，要求根据参数动态生成"li"标签页码并插入"ul"标签下。要求如下：
+1. "allItem"为总数据项个数，"pageItem"为每页的数据项个数
+2. "li"标签内容为当前页码数，页码从1开始
+示例1
+输入：
+_createPage(13,2)
+复制
+输出：
+"li"长度为7，"li"内容依次为"1","2","3","4","5","6","7"
+```html
+    <body>
+    	<ul id="ul">
+            
+        </ul>
+        <script type="text/javascript">
+            const _createPage = (allItem, pageItem) => {
+                // 补全代码
+                
+            }
+        </script>
+    </body>
+```
+
+## 总成绩排名
+请补全JavaScript代码，要求将数组参数中的对象以总成绩(包括属性"chinese"、"math"、"english")从高到低进行排序并返回。
+
+```html
+    <body>
+    	
+        <script type="text/javascript">
+        const _rank = array => {
+            // 补全代码
+            
+        }
+        </script>
+    </body>
+```
+
+## 子字符串频次
+请补全JavaScript代码，该函数接受两个参数分别为字符串、子字符串，要求返回子字符串在字符串中出现的频次。
+```html
+        <script>
+            const _searchStrIndexOf = (str, target) => {
+                // 补全代码
+                // 补全代码
+                let arr = str.split(target)
+                return arr.length-1
+            }
+        </script>
+```
