--- a/docs/thinking/article/2022.1.17-js-advanced.md
+++ b/docs/thinking/article/2022.1.17-js-advanced.md
@@ -394,3 +394,31 @@ _createPage(13,2)
             }
         </script>
 ```
+
+## 继承
+
+```html
+        <script type="text/javascript">
+            function Human(name) {
+                this.name = name
+                this.kingdom = 'animal'
+                this.color = ['yellow', 'white', 'brown', 'black']
+            }
+            
+            function Chinese(name,age) {
+                Human.call(this,name)
+                this.age = age
+                this.color = 'yellow'
+            }
+
+            // 补全代码
+            Human.prototype.getName = function(){
+                return this.name
+            }
+            
+            Chinese.prototype.__proto__ = Human.prototype;
+            Human.prototype.getAge = function(){
+                return this.age
+            }
+        </script>
+```
