完成了70%，还算不错吧？

--- a/docs/thinking/article/2022.1.17-js-advanced.md
+++ b/docs/thinking/article/2022.1.17-js-advanced.md
@@ -648,7 +648,8 @@ new Rectangle(12,12).area
         <script type="text/javascript">
             const _elementKey = () => {
                 // 补全代码
-                
+                let map = new Map()
+                map.set('p',p.innerText)
             }
         </script>
     </body>
@@ -688,7 +689,9 @@ new Rectangle(12,12).area
 
         <script>
             // 补全代码
-            
+            li.onclick=function(e){
+                lis.forEach(item=>item.checked=e.target.checked)
+            }
         </script>
     </body>
 </html>
@@ -707,7 +710,9 @@ new Rectangle(12,12).area
         <script type="text/javascript">
             const _isPalindrome = string => {
                 // 补全代码
-                
+                let arr = string.split('')
+                let reverseArr = arr.reverse()
+                return arr == reverseArr
             }
         </script>
     </body>
@@ -721,7 +726,16 @@ new Rectangle(12,12).area
             let count = 0
             const _proxy = object => {
                 // 补全代码
-                
+                const p = new Proxy(object,{
+                    get(obj,prop){
+                        if(prop in obj){
+                            count ++
+                        }else{
+                            count --
+                        }
+                    }
+                })
+                return p
             }
         </script>
 ```
@@ -734,7 +748,13 @@ new Rectangle(12,12).area
         <script type="text/javascript">
             const _proxy = (object,...prototypes) => {
                 // 补全代码
-                
+                new Proxy(object,{
+                    set(obj,prop,value){
+                        if([...prototypes].includes(prop)){
+                            return 'noright'
+                        }
+                    }
+                })
             }
         </script>
 ```
@@ -773,7 +793,7 @@ new Rectangle(12,12).area
             }
             _render(ul);
             // 补全代码
-            
+            obj.definePropty(obj,props)
         </script>
     </body>
 </html>
@@ -823,7 +843,7 @@ new Rectangle(12,12).area
         
         <script type="text/javascript">
             // 补全代码
-            
+            onclick
         </script>
     </body>
 </html>
@@ -850,7 +870,7 @@ new Rectangle(12,12).area
             
             const _api = string => {
                 // 补全代码
-                
+                split,join.push
             }
         </script>
     </body>
@@ -913,7 +933,7 @@ new Rectangle(12,12).area
             var optionItems = [].slice.call(document.querySelectorAll('.options li'));
             var items = [].slice.call(document.querySelectorAll('.items li'));
             // 补全代码
-            
+            onclick,index,e.target.style.xx=xx
         </script>
     </body>
 </html>
@@ -959,7 +979,7 @@ new Rectangle(12,12).area
             }
             _render(ul);
             // 补全代码
-            
+            obj.definedPropty
         </script>
     </body>
 </html>
@@ -981,7 +1001,7 @@ __findMostType([0,0,'',''])
         <script type="text/javascript">
             const _findMostType = array => {
                 // 补全代码
-                
+                typeof incetanceof
             }
         </script>
 ```
@@ -1015,7 +1035,7 @@ __findMostType([0,0,'',''])
             const btn = document.querySelector("button");
             btn.onclick = () => {
                 // 补全代码
-                
+                p.innerText.replace('xx','xxxx')
             }
         </script>
     </body>
@@ -1075,7 +1095,7 @@ __findMostType([0,0,'',''])
             }
             const _createElm = vnode => {
                 // 补全代码
-                
+                ddd
             }
         </script>
     </body>
@@ -1088,7 +1108,7 @@ __findMostType([0,0,'',''])
 oNode1 和 oNode2 在同一文档中，且不会为相同的节点
 ```js
 function commonParentNode(oNode1, oNode2) {
-    
+    ddd
 }
 ```
 
@@ -1108,7 +1128,7 @@ http://www.nowcoder.com?key=1&key=2&key=3&test=4#hehe key
 
 ```js
 function getUrlParam(sUrl, sKey) {
-    
+    ddd
 }
 ```
 
@@ -1125,7 +1145,7 @@ function getUrlParam(sUrl, sKey) {
 
 ```js
 function bindThis(f, oTarget) {
-    
+    ddd
 }
 ```
 
@@ -1138,7 +1158,7 @@ namespace({a: {test: 1, b: 2}}, 'a.b.c.d')
 {a: {test: 1, b: {c: {d: {}}}}}
 ```js
 function namespace(oNamespace, sPackage) {
-    
+    ddd
 }
 ```
 
@@ -1164,7 +1184,7 @@ Array.prototype.uniq = function () {
 用 JavaScript 实现斐波那契数列函数,返回第n个斐波那契数。 f(1) = 1, f(2) = 1 等
 ```js
 function fibonacci(n) {
-    
+    ddd
 }
 ```
 
@@ -1195,7 +1215,7 @@ formatDate(new Date(1409894060000), 'yyyy-MM-dd HH:mm:ss 星期w')
 输出：
 2014-09-05 13:14:20 星期五
 
-
+ddd
 ## 获取字符串长度
 描述
 如果第二个参数 bUnicode255For1 === true，则所有字符长度为 1
@@ -1208,6 +1228,7 @@ formatDate(new Date(1409894060000), 'yyyy-MM-dd HH:mm:ss 星期w')
 17
 ```js
 function strLength(s, bUnicode255For1) {
+    ddd
 }
 ```
 
@@ -1220,7 +1241,7 @@ function strLength(s, bUnicode255For1) {
 true表示格式正确
 ```js
 function isAvailableEmail(sEmail) {
-    
+    ddd
 }
 ```
 
@@ -1236,7 +1257,7 @@ function isAvailableEmail(sEmail) {
 3
 ```js
 function count(arr, item) {
-
+ddd
 }
 ```
 
@@ -1251,7 +1272,7 @@ function count(arr, item) {
 [1, 3, 4]
 ```js
 function duplicates(arr) {
-
+ddd
 }
 ```
 
@@ -1262,7 +1283,7 @@ function duplicates(arr) {
 3、第一个数需要立即输出
 ```js
 function count(start, end) {
-
+ddd
 }
 ```
 
@@ -1281,7 +1302,7 @@ function count(start, end) {
 fizzbuzz
 ```js
 function fizzBuzz(num) {
-
+ddd
 }
 ```
 
@@ -1297,7 +1318,7 @@ Hello, Ellie!
 
 ```js
 function argsAsArray(fn, arr) {
-
+ddd
 }
 ```
 
@@ -1312,7 +1333,7 @@ function () {return this.greeting + ', ' + this.name + '!!!';}, {greeting: 'Hell
 Hello, Rebecca!!!
 ```js
 function speak(fn, obj) {
-
+ddd
 }
 ```
 
@@ -1331,7 +1352,7 @@ Hello, world
 
 ```js
 function functionFunction(str) {
-
+ddd
 }
 ```
 
@@ -1350,7 +1371,7 @@ function functionFunction(str) {
 4
 ```js
 function makeClosures(arr, fn) {
-
+ddd
 }
 ```
 
@@ -1367,7 +1388,7 @@ var sayIt = function(greeting, name, punctuation) {     return greeting + ', ' +
 Hello, Ellie!!!
 ```js
 function partial(fn, str1, str2) {
-
+ddd
 }
 ```
 
@@ -1383,7 +1404,7 @@ function partial(fn, str1, str2) {
 
 ```js
 function useArguments() {
-
+ddd
 }
 ```
 
@@ -1401,7 +1422,7 @@ function useArguments() {
 
 ```js
 function callIt(fn) {
-    
+    ddd
 }
 ```
 
@@ -1420,7 +1441,7 @@ function callIt(fn) {
 
 ```js
 function partialUsingArguments(fn) {
-
+ddd
 }
 ```
 
@@ -1440,7 +1461,7 @@ var fn = function (a, b, c) {return a + b + c}; curryIt(fn)(1)(2)(3);
 6
 ```js
 function curryIt(fn) {
-
+ddd
 }
 ```
 
@@ -1453,7 +1474,7 @@ function curryIt(fn) {
 
 ```js
 function createModule(str1, str2) {
-
+ddd
 }
 ```
 
@@ -1472,7 +1493,7 @@ function createModule(str1, str2) {
 
 ```js
 function valueAtBit(num, bit) {
-
+ddd
 }
 ```
 
@@ -1487,7 +1508,7 @@ function valueAtBit(num, bit) {
 192
 ```js
 function base10(str) {
-
+ddd
 }
 ```
 
@@ -1502,7 +1523,7 @@ function base10(str) {
 01000001
 ```js
 function convertToBinary(num) {
-
+ddd
 }
 ```
 
@@ -1517,7 +1538,7 @@ function convertToBinary(num) {
 0.0003
 ```js
 function multiply(a, b) {
-
+ddd
 }
 ```
 
@@ -1532,7 +1553,7 @@ alterContext(function() {return this.greeting + ', ' + this.name + '!'; }, {name
 Yo, Rebecca!
 ```js
 function alterContext(fn, obj) {
-
+ddd
 }
 ```
 
@@ -1550,7 +1571,7 @@ What's up
 
 ```js
 function alterObjects(constructor, greeting) {
-
+ddd
 }
 ```
 
@@ -1570,7 +1591,7 @@ iterate(new C());
 
 ```js
 function iterate(obj) {
-
+ddd
 }
 ```
 
@@ -1586,7 +1607,7 @@ true
 
 ```js
 function containsNumber(str) {
-
+ddd
 }
 ```
 
@@ -1601,7 +1622,7 @@ function containsNumber(str) {
 true
 ```js
 function containsRepeatingLetter(str) {
-
+ddd
 }
 ```
 
@@ -1618,7 +1639,7 @@ function containsRepeatingLetter(str) {
 true
 ```js
 function endsWithVowel(str) {
-
+ddd
 }
 ```
 
@@ -1637,7 +1658,7 @@ function endsWithVowel(str) {
 
 ```js
 function captureThreeNumbers(str) {
-
+ddd
 }
 ```
 
@@ -1654,7 +1675,7 @@ function captureThreeNumbers(str) {
 true
 ```js
 function matchesPattern(str) {
-
+ddd
 }
 ```
 
@@ -1673,7 +1694,7 @@ function matchesPattern(str) {
 true
 ```js
 function isUSD(str) {
-
+ddd
 }
 ```
 
@@ -1692,7 +1713,7 @@ function isUSD(str) {
 
 ```js
 function rgb2hex(sRGB) {
-    
+    ddd
 }
 ```
 
@@ -1710,7 +1731,7 @@ fontSize
 
 ```js
 function cssStyle2DomStyle(sName) {
-
+    split upperCase
 }
 ```
 
@@ -1766,11 +1787,11 @@ td,th{
 js
 ```js
 function add(items) {
-    
+    ddddd
 }
 
 function bind() {
-    
+    ddd
 }
 ```
 
@@ -1832,7 +1853,7 @@ td,th{
 js
 ```js
 function sort(type, order) {
-
+dddddd
 }
 ```
 
@@ -1862,7 +1883,7 @@ a {
 js
 ```js
 function link() {
-    
+    ddd
 }
 ```
 
@@ -1893,11 +1914,11 @@ css
 js
 ```js
 function second(second) {
-    
+    ddd
 }
 
 function render(data) {
-    
+    ddd
 }
 ```
 
@@ -2085,7 +2106,7 @@ js
 randomFn();
 
 function randomFn() {
-
+ddd
 }
 ```
 
@@ -2162,7 +2183,7 @@ css
 js
 ```js
 function suggest(items) {
-
+ddd
 }
 ```
 
@@ -2180,6 +2201,9 @@ function suggest(items) {
 10、请使用ES5语法
 <image src="https://uploadfiles.nowcoder.com/images/20180824/56_1535099604420_D0FC796DE87B7EF8F145CF2346FC2531" />
 
+```js
+ddd
+```
 ## 分页
 描述
 本题展示了一个分页组件，界面中存在id=jsContainer的节点A，系统会随机实例化各种Pagination实例，请按照如下要求补充完成Pagination函数。
@@ -2338,7 +2362,7 @@ function Pagination(container, total, current) {
         //TODO: 生成组件的内部html字符串
         return '';
     }
-
+ddd
     function val(current) {
         if (arguments.length === 0) return this.current;
         if (current < 1 || current > this.total || current === this.current) return;
@@ -2407,6 +2431,7 @@ function bind() {
         if (!{'37': 1, '38': 1, '39': 1, '40': 1}[code]) return;
         event.preventDefault && event.preventDefault();
         //TODO: 请实现按键控制
+        ddd
     };
 }
 ```
@@ -2447,7 +2472,7 @@ body{
 js
 ```js
 function dom2json() {
-
+ddd
 }
 ```
 
@@ -2550,11 +2575,11 @@ function bindEvent() {
 }
 
 function addTag() {
-
+dddd
 }
 
 function removeTag() {
-
+ddd
 }
 ```
 
@@ -2659,6 +2684,7 @@ function fToggleEl(item) {
         // 请补全代码
     } else {
         // 请补全代码
+        dddd
     }
 }
 
