小小红色写字书

--- a/docs/html-css-js/article/2022.1.16-0-base-front-end.md
+++ b/docs/html-css-js/article/2022.1.16-0-base-front-end.md
@@ -42,7 +42,7 @@
 请写出具有标题属性和代替文本属性的图片标签。
 ```html
 <!-- 补全代码 -->
-<image title="xx" alt="xx" />
+<img title="xx" alt="xx" />
 ```
 
 #### **新窗口打开文档**
@@ -267,7 +267,7 @@ p{
 2. 没有显示的边框，其属性都是透明（属性）
 3. 仅通过border属性完成边框的所有属性设置
 效果如下：
-<image src="https://uploadfiles.nowcoder.com/images/20211224/920662346_1640317382208/B6EA6DD4293BE91B04BF08DF13643103" />
+<img src="https://uploadfiles.nowcoder.com/images/20211224/920662346_1640317382208/B6EA6DD4293BE91B04BF08DF13643103" />
 ```html
 <!DOCTYPE html>
 <html>
