--- a/docs/html-css-js/article/2022.1.17-js-advanced.md
+++ b/docs/html-css-js/article/2022.1.17-js-advanced.md
@@ -1933,9 +1933,9 @@ function render(data) {
   1.将选中的红球和蓝球（页面中对应DOM元素）用class="active"高亮
   2.将选中的球按号码从小到大排列，移至所属组的前方，结果如示意图所示
   3.每次执行 randomFn 函数，输出符合要求且不完全重复
-<image src="https://uploadfiles.nowcoder.com/images/20180912/56_1536742847965_6A5DCE935C2B11A7798DAD3BC7BBD64B" />
+<img src="https://uploadfiles.nowcoder.com/images/20180912/56_1536742847965_6A5DCE935C2B11A7798DAD3BC7BBD64B" />
 
-<image src="https://uploadfiles.nowcoder.com/images/20180912/56_1536742847965_6A5DCE935C2B11A7798DAD3BC7BBD64B" />
+<img src="https://uploadfiles.nowcoder.com/images/20180912/56_1536742847965_6A5DCE935C2B11A7798DAD3BC7BBD64B" />
 注意：
 1、请使用原生JavaScript操作DOM元素，不要增加、删除DOM元素或修改css
 2、请使用ES5语法
@@ -2199,7 +2199,7 @@ ddd
 8、请不要手动修改html和css
 9、不要使用第三方插件
 10、请使用ES5语法
-<image src="https://uploadfiles.nowcoder.com/images/20180824/56_1535099604420_D0FC796DE87B7EF8F145CF2346FC2531" />
+<img src="https://uploadfiles.nowcoder.com/images/20180824/56_1535099604420_D0FC796DE87B7EF8F145CF2346FC2531" />
 
 ```js
 ddd
@@ -2383,7 +2383,7 @@ ddd
 5、请不要手动修改html和css，请不要修改js中的事件绑定方式
 6、不要使用第三方插件
 
-<image src="https://uploadfiles.nowcoder.com/images/20200109/56_1578559651879_F79F98F69BF869A4E4CD476EE11795B1" />
+<img src="https://uploadfiles.nowcoder.com/images/20200109/56_1578559651879_F79F98F69BF869A4E4CD476EE11795B1" />
 
 html
 ```html
@@ -2449,7 +2449,7 @@ function bind() {
 8、当前界面执行dom2json之后的结果为如下图所示
 9、请不要手动修改html和css
 10、不要使用第三方插件
-<image src="https://uploadfiles.nowcoder.com/images/20200817/56_1597637560042_D6935BDF5534EB0D7C4F62186165A19B" />
+<img src="https://uploadfiles.nowcoder.com/images/20200817/56_1597637560042_D6935BDF5534EB0D7C4F62186165A19B" />
 
 html
 ```html
@@ -2490,7 +2490,7 @@ ddd
 9、不要使用第三方插件
 10、请使用ES5语法
 
-<image src="https://uploadfiles.nowcoder.com/images/20190815/56_1565836688438_96FDEF4066B040FA34DF866E733CDFFF" />
+<img src="https://uploadfiles.nowcoder.com/images/20190815/56_1565836688438_96FDEF4066B040FA34DF866E733CDFFF" />
 
 html
 ```html
@@ -2594,12 +2594,12 @@ var options = [{text: '选项a', value: 'a'}, {text: '选项b', value: 'b'}, {te
 实例化单选组件：
 var item = new CheckGroup(document.getElementById('jsCheckGroup'), options);
 item.val(['a']);
-<image src="https://uploadfiles.nowcoder.com/images/20190828/56_1566996717542_7701F92D7667E956D833EC53A6918814" />
+<img src="https://uploadfiles.nowcoder.com/images/20190828/56_1566996717542_7701F92D7667E956D833EC53A6918814" />
 
 实例化多选组件：
 var item = new CheckGroup(document.getElementById('jsCheckGroup'), options, true);
 item.val(['a']);
-<image src="https://uploadfiles.nowcoder.com/images/20190828/56_1566996707156_593617FF7047544EFE57118A9E85D99E" />
+<img src="https://uploadfiles.nowcoder.com/images/20190828/56_1566996707156_593617FF7047544EFE57118A9E85D99E" />
 
 具体功能和需求如下：
 1、单选组件请在 div.checkgroup 元素加上class radius
@@ -2710,7 +2710,7 @@ function fVal(values) {
 ```
 
 ## 简易计算器
-<image src="https://uploadfiles.nowcoder.com/images/20190829/56_1567050015887_82A1280122DABD89B1063F2A0AD723E5" />
+<img src="https://uploadfiles.nowcoder.com/images/20190829/56_1567050015887_82A1280122DABD89B1063F2A0AD723E5" />
 
 本题展示了一个简化版的计算器，需求如下：
 1、除法操作时，如果被除数为0，则结果为0
