--- a/docs/other/article/2022.1.11-the-little-red-writing-book-exercise.md
+++ b/docs/other/article/2022.1.11-the-little-red-writing-book-exercise.md
@@ -1,8 +1,8 @@
 # 红色写字书练习
 
-## 1结构
+## 结构
 
-### 1.1 开门见山
+### 开门见山
 
 写博客，技术文章，不要和读者玩躲猫猫的游戏，让读者猜测你到底在说什么。
 
@@ -15,7 +15,7 @@
     小红，你知道吗，在xx地点，然后左转，然后你会看见一个理发店，就在它的对面，是一个快递点，你能帮我去取个快递吗？
 ```
 
-### 1.2 分解事物
+### 分解事物
 把主题分解成二到四个主要部分，然后运用引导句。
 
 引导句与主题句；
@@ -61,3 +61,65 @@ _______________________________________________________________
     绿色是所有这些颜色中最有意思的，甚至蓝色和黄色混合起来就能形成绿色。
 ________________________________________________________________
 ```
+
+### 使用转折词
+
+事例：
+```
+文艺复兴时期是人类史上最辉煌的时代，有如下几个原因，首先，_____________
+______________，其次，________________________。__________________
+再次，____________________________。例如，_____________________。此外
+____________________________，最后________________________________。
+```
+
+### 回顾六大基本写作结构
+
+写作很大程度上是排列观点陈述的顺序并对其进行强调。
+
+<img :src="'https://static01.imgkr.com/temp/158f17a323004ddd9f0f0db4e824b28a.jpg'" />
+
+### 整合相似事物
+
+想象一下你去动物园观光，结果发现所有动物全关在一个笼子里。这不仅对动物危险，而且也不利于我们确切的观察。
+而有些文章就像这样，观点杂糅。
+
+### 支撑文章内容
+
+### 例证个性化
+
+### 选择恰当语气
+积极词语，消极词语。
+
+比如：
+
+```
+消极（关门）：
+
+商店晚上7点关门。
+
+积极（开着）：
+
+商店一直到晚上7点都开着。
+```
+
+```
+消极（xx不是xx）
+
+这个计划不完善
+
+积极（积极方式陈述不足,xx是xx）
+
+这个计划有缺陷
+```
+
+## 利用排班和设计
+
+## 运用可读性工具
+粗体，斜体，破折号等等
+
+## 使用标题或提要
+
+## 回顾和修改文章
+知道你的文章改到无可修改，否则不能说已经完成了。
+
+虽然人人都讨厌这个过程。
