--- a/docs/sundry/article/2022.1.29-hand-common-code.md
+++ b/docs/sundry/article/2022.1.29-hand-common-code.md
@@ -138,3 +138,34 @@ function flatten(arr) {
     return arr;
 }
 ```
+
+## 真正的冒泡排序
+```js
+        function bubbleSort(array) {
+            // 1.获取数组的长度
+            var length = array.length;
+
+            // 2.反向循环, 因此次数越来越少
+            // 循环length - 1 次
+            // 外面是从右往左
+            for (var i = length - 1; i >= 0; i--) {
+                // 3.根据i的次数, 比较循环到i位置
+                // 这才是冒泡排序！！
+                // 里面是从左往右
+                for (var j = 0; j < i; j++) {
+                    // 4.如果j位置比j+1位置的数据大, 那么就交换
+                    if (array[j] > array[j + 1]) {
+                        // 交换
+                        // const temp = array[j+1]
+                        // array[j+1] = array[j]
+                        // array[j] = temp
+                        // 数组结构赋值，秒呀
+                        [array[j + 1], array[j]] = [array[j], array[j + 1]];
+                    }
+                }
+            }
+
+            return array;
+        } 
+        console.log(bubbleSort([6,7,2,8,6]));
+```
