--- a/docs/vue/article/2022.1.31-vue2-3-essay.md
+++ b/docs/vue/article/2022.1.31-vue2-3-essay.md
@@ -56,3 +56,77 @@ onMounted(()=>{
 
 </style>
 ```
+
+## 共享状态
+编写一个公共函数usePromise函数需求如下：
+
+传入一个function类型参数，里面执行异步代码。要求usePromise返回以下属性。
+
+- results : 返回Promise执行结果
+- loading： 返回Promise运行状态
+  - PENDING :true
+  - REJECTED : false
+  - RESOLVED: false
+- error ： 返回执行错误
+```vue
+<script setup lang="ts">
+import { ref, watch } from 'vue'
+// 输入框值
+let input = ref("")
+// 根据输入框值，搜索函数
+const searchInput = (str: String) => {
+  return new Promise((resolve) => {
+    setTimeout(() => {
+      resolve(str.length)
+    }, 1000)
+  })
+}
+// 使用Promise，
+// promise是什么？状态集
+let res = usePromise(searchInput)
+
+watch(input, (newValue) => {
+  if (newValue === '') {
+    res.results.value = ''
+  } else {
+    res.createPromise(newValue)
+  }
+})
+// 使用状态集
+function usePromise(fn: Function) {
+  let loading = ref(false)
+  let error = ref(null)
+  let results = ref('')
+  // 一个方法,改变状态集，也属于状态集,
+  async function createPromise(...args: any[]) {
+    loading.value = true
+    error.value = null
+    results.value = ''
+    try {
+      results.value = await fn(...args)
+    } catch (error: any) {
+      error.value = error.value
+    } finally {
+      loading.value = false
+    }
+  }
+  // 返回状态集
+  return { loading, error, results, createPromise }
+}
+
+</script>
+
+<template>
+  输入：
+  <input type="text" v-model="input" />
+  <div></div>
+  loading：{{ res.loading }}
+  <div></div>
+  error:{{ res.error }}
+  <div></div>
+  results:{{ res.results }}
+</template>
+
+<style scoped>
+</style>
+```
