--- a/docs/vue/article/2022.1.31-vue2-3-essay.md
+++ b/docs/vue/article/2022.1.31-vue2-3-essay.md
@@ -277,8 +277,8 @@ export function reactive(raw:Object){
             dep.depend();
 
             // return target[key]
-            // return Reflect.get(target,key)
-            return dep.value
+            return Reflect.get(target,key)
+            // return dep.value // 这里返回的是dep的值，那么改变代理的值时也要改变对应dep的值。
         },
         set(target,key,value){
             // 触发依赖
@@ -300,4 +300,226 @@ let user  = reactive({
 effectWatch(()=>{
     console.log(user.age);
 })
+```
+## setup原理
+index.html中
+```html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <script type="module" src="./main.js"></script>
+</body>
+</html>
+```
+引入的main.js
+```js
+import {effectWatch,reactive} from './reactivity.js'
+
+// vue3
+// 根组件
+const App = {
+    // 所谓的上下文，类型就是一个对象
+    render(context){
+        effectWatch(()=>{
+            // 构建view = b
+            document.body.innerText = ''
+            const div = document.createElement("div");
+            div.innerText = context.state.count;
+            console.log(context.state.count);
+            // root
+            document.body.append(div)
+        })
+        return context
+    },
+    setup(){
+        const state = reactive({
+            count:0
+        })
+        // 方便在浏览器调适
+        window.state = state
+        setTimeout(()=>state.count++,1000)
+        return {state}
+    }
+}
+
+// 执行渲染函数
+App.render(App.setup())
+```
+换一种方式
+
+目录结构：
+
+- my-test
+  - core
+    - reactivity.js
+    - index.js
+  - App.js // 根组件
+  - index.html // 模板
+  - main.js // 被模板引入
+
+core/index.js
+```js
+import {effectWatch} from './reactivity.js'
+
+export function createApp(rootComponent){
+    return {
+        mount(rootContainer){
+            
+            const context = rootComponent.setup();
+            effectWatch(()=>{
+                rootContainer.innerHTML = ``
+                const element = rootComponent.render(context)
+
+                rootContainer.append(element)
+            })
+        }
+    }
+}
+```
+
+App.js
+```js
+import { reactive } from "./core/reactivity.js";
+// App根组件  rootComponent
+export const App = {
+    render(context) {
+        // view --> 每次我都需要重新的创建
+        // 要计算出最小的更新点 -> vdo
+        // js --> diff
+        const div = document.createElement("div");
+        div.innerText = context.state.count;
+        return div
+    },
+    setup() {
+        const state = reactive({
+            count: 0
+        })
+        // 方便在浏览器调适
+        window.state = state
+        setTimeout(() => state.count++, 1000)
+        return { state }
+    }
+}
+```
+
+index.html,就是引入main.js文件
+
+main.js文件
+```js
+import { App } from './App.js';
+import { createApp } from './core/index.js';
+
+// main.js的工作
+createApp(App).mount(document.querySelector('#app'))
+```
+
+## render原理
+h函数的作用
+
+`import { h } from "./core/h.js";`
+```js
+// 创建一个虚拟节点 vdom vnode
+export function h (tag,props,children){
+    return {
+        tag,
+        props,
+        children
+    }
+}
+```
+
+更改App.js
+```js{10-18}
+import { reactive } from "./core/reactivity.js";
+import { h } from "./core/h.js";
+// App根组件  rootComponent
+export const App = {
+    render(context) {
+        // view --> 每次我都需要重新的创建
+        // 要计算出最小的更新点 -> vdo
+        // js --> diff
+
+        // const div = document.createElement("div");
+        // div.innerText = context.state.count;
+        // return div
+        // return h("div",{
+        //     id:113
+        // },String(context.state.count))
+        // 创建虚拟节点
+        return h("div",{
+            id:113
+        },[h('p',null,'xx'),h('p',null,'oo')])
+    },
+    setup() {
+        const state = reactive({
+            count: 0
+        })
+        // 方便在浏览器调适
+        window.state = state
+        setTimeout(() => state.count++, 1000)
+        return { state }
+    }
+}
+```
+core/index.js 创建虚拟节点
+```js{11-12}
+import {effectWatch} from './reactivity.js'
+import { mountElement } from '../renderer.js';
+export function createApp(rootComponent){
+    return {
+        mount(rootContainer){
+            
+            const context = rootComponent.setup();
+            effectWatch(()=>{
+                rootContainer.innerHTML = ``
+                // subTree,虚拟节点
+                const subTree = rootComponent.render(context)
+                mountElement(subTree,rootContainer)
+
+                // rootContainer.append(element)
+            })
+        }
+    }
+}
+```
+
+core/renderer.js, mountElement函数
+
+将虚拟节点转化为真实dom节点
+```js
+// vdom --> dom
+export function mountElement(vnode,container){
+    const {tag,props,children} = vnode;
+    // tag
+    const el = document.createElement(tag)
+    //props:Object
+    if(props){
+        for(const key in props){
+            const val = props[key]
+            el.setAttribute(key,val)
+        }
+    }
+    // children
+    // 1.可以接受一个string
+    if(typeof children === 'string'){
+        const textNode = document.createTextNode(children)
+        el.append(textNode)
+    }else if(Array.isArray(children)){
+        // 递归遍历
+        children.forEach(v=>{
+            mountElement(v,el)
+        })
+    }
+    // 2.可以接受一个数组
+    
+
+    // 插入
+    container.append(el);
+}
 ```
