--- a/docs/vue/article/2022.1.31-vue2-3-essay.md
+++ b/docs/vue/article/2022.1.31-vue2-3-essay.md
@@ -523,3 +523,206 @@ export function mountElement(vnode,container){
     container.append(el);
 }
 ```
+
+## diff算法
+
+App.js （根组件）
+这种情况下，当state.count变化时，dom会进行全部更新
+```js{8}
+import { reactive } from "./core/reactivity.js";
+import { h } from "./core/h.js";
+// App根组件  rootComponent
+export const App = {
+    render(context) {
+        return h("div",{
+            id:113
+        },[h('p',null,String(context.state.count)),h('p',null,'oo')])
+    },
+    setup() {
+        const state = reactive({
+            count: 0
+        })
+        // 方便在浏览器调适
+        window.state = state
+        setTimeout(() => state.count++, 1000)
+        return { state }
+    }
+}
+```
+
+main.js
+```js
+import { App } from './App.js';
+import { createApp } from './core/index.js';
+
+// vue3
+
+// main.js的工作
+createApp(App).mount(document.querySelector('#app'))
+```
+h.js
+```js
+// 创建一个虚拟节点 vdom vnode
+export function h (tag,props,children){
+    return {
+        tag,
+        props,
+        children
+    }
+}
+```
+
+index.js，导出createApp函数
+```js
+import { effectWatch } from './reactivity.js'
+import { mountElement,diff } from '../renderer.js';
+export function createApp(rootComponent) {
+    return {
+        mount(rootContainer) {
+            const context = rootComponent.setup();
+            let isMounted = false;
+            let prevSubTree;
+
+            effectWatch(() => {
+                rootContainer.innerHTML = ``
+
+                if (!isMounted) {
+                    // init
+                    // subTree,虚拟节点
+                    isMounted = true
+                    const subTree = rootComponent.render(context)
+                    mountElement(subTree, rootContainer)
+                    prevSubTree = subTree;
+                    // rootContainer.append(element)
+                }else{
+                    // update
+                    const subTree = rootComponent.render(context)
+                    diff(prevSubTree,subTree)
+                    // mountElement(subTree, rootContainer)
+                    prevSubTree = subTree;
+                }
+
+            })
+        }
+    }
+}
+```
+
+renderer.js，导出mountElment和diff函数
+```js
+// n1 oldVnode
+// n2 newVnode
+export function diff(n1,n2){
+    // 1. tag
+    if(n1.tag !== n2.tag){
+        n1.el.replaceWith(document.createElement(n2.tag));
+
+    }else{
+        // 小细节
+        const el = n2.el = n1.el;
+        // 2. props
+        // new: {id:"foo",class:"bar",a}
+        // old: {id:"foo",class:"bar1",a,b}
+        const {props:newProps} = n2;
+        const {props:oldProps} = n1;
+
+        if(newProps && oldProps){
+            Object.keys(newProps).forEach(key=>{
+                const newVal = newProps[key];
+                const oldVal = oldProps[key];
+                if(newVal !== oldVal){
+                    el.setAttribute(key,newVal)
+                }
+            })
+        }
+
+        if(oldProps){
+            Object.keys(oldProps).forEach(key=>{
+                if(!newProps[key]){
+                    el.removeAttribute(key);
+                }
+            })
+        }
+
+        // 3. children --> (暴力解法)
+        //      1.newChildren --> string(oldChildren --> string oldChildren --> array)
+        //      2.newChildren --> array(oldChildren --> string oldChildren --> array)
+        const {children:newChildren} = n2;
+        const {children:oldChildren} = n1;
+        if(typeof newChildren === "string"){
+            if(typeof oldChildren === "string"){
+                if(newChildren !== oldChildren){
+                    el.textContent = newChildren
+                }
+            }else if(Array.isArray(oldChildren)){
+                el.textContent = newChildren;
+            }
+        }else if(Array.isArray(newChildren)){
+            if(typeof oldChildren === "string"){
+                el.innerText = ''
+                mountElement(n2,el)
+            }else if(Array.isArray(oldChildren)){
+                // new {a,b,c,d,f}
+                // old {a,e,c,d}
+
+                const length = Math.min(newChildren.length,oldChildren.length)
+
+                // 处理公共的vnode
+                for(let index=0;index<length;index++){
+                    const newVnode = newChildren[index]
+                    const oldVnode = oldChildren[index]
+                    diff(oldVnode,newVnode)
+                }
+
+                if(newChildren.length>length){
+                    // 创建节点
+                    for(let index=length;index<newChildren.length;index++){
+                        const newVnode = newChildren[index];
+                        mountElement(newVnode)
+                    }
+                }
+
+                if(oldChildren.lenght > length){
+                    // 删除节点
+                    for(let index = length; index<oldChildren.length;index++){
+                        const oldVnode = oldChildren[index];
+                        oldVnode.el.parent.removeChild(oldVnode.el)
+                    }
+                }
+            }
+        }
+    }
+    
+}
+
+
+// vdom --> dom
+export function mountElement(vnode,container){
+    const {tag,props,children} = vnode;
+    // tag
+    const el = vnode.el = document.createElement(tag)
+    //props:Object
+    if(props){
+        for(const key in props){
+            const val = props[key]
+            el.setAttribute(key,val)
+        }
+    }
+    // children
+    // 1.可以接受一个string
+    if(typeof children === 'string'){
+        const textNode = document.createTextNode(children)
+        el.append(textNode)
+    }else if(Array.isArray(children)){
+        // 递归遍历
+        children.forEach(v=>{
+            mountElement(v,el)
+        })
+    }
+    // 2.可以接受一个数组
+    
+    console.log(container,el);
+    // 插入
+    container.append(el);
+}
+```
