--- a/docs/java/article/2022.2.4-one-day.md
+++ b/docs/java/article/2022.2.4-one-day.md
@@ -5,15 +5,7 @@
 
 搜索JDK 17，确保从Oracle的官网下载最新的稳定版JDK：
 
-安装完JDK后，需要设置一个JAVA_HOME的环境变量，它指向JDK的安装目录。在Windows下，它是安装目录，类似：
-
-C:\Program Files\Java\jdk-17
-
-然后，把JAVA_HOME的bin目录附加到系统环境变量PATH上。在Windows下，它长这样：
-
-Path=%JAVA_HOME%\bin;<现有的其他路径>
-
-把JAVA_HOME的bin目录添加到PATH中是为了在任意文件夹下都可以运行java。打开命令提示符窗口，输入命令java -version，如果一切正常
+安装完JDK后，需要设置一个名为%JAVA_HOME%，值为jdk的bin目录的环境变量。打开命令提示符窗口，输入命令java -version
 ```shell
 名词解释
 初学者学Java，经常听到JDK、JRE这些名词，它们到底是啥？
