自定义渲染器

--- a/docs/vue/article/2022.1.31-vue2-3-essay.md
+++ b/docs/vue/article/2022.1.31-vue2-3-essay.md
@@ -8,6 +8,83 @@
     非官方，但有很多学习、面试、实战资料
 
     https://vue3js.cn/
+
+## tip
+- style标签中的scoped改为mudule，然后可以在模板中通过驼峰式写法引用。这样做的好处是会自动给类名添加hash，不怕会起冲突了。
+
+例如
+```vue
+<template>
+    <div :class="$style.messageBox">
+        ddd
+    </div>
+</template>
+<style module>
+    .message-box{
+        padding:10px;
+        color:#fff;
+    }
+</style>
+```
+
+- 使用css预处理器
+
+直接使用即可，但记得要`npm i scss`下载
+```css
+<style lang="scss">
+</style>
+
+/* 通过js文件引入也可以 */
+import "\./common.scss"
+```
+
+- PostCss
+
+为css添加前缀，获取兼容性处理。
+
+Vite自动对*.vue文件和导入的.css文件应用PostCss配置，我们只需要安装必要的插件(比如`postcss`和 `autoprefixer`)和添加并配置`postcss.config.js`文件即可。
+```js
+module.exports = {
+    plugins:[
+        require('autoprefixer')
+    ]
+}
+```
+
+- 代码规范和格式化eslint+prettier
+我们借助eslint规范项目代码，通过prettier做代码格式化。
+
+首先在项目安装依赖，package.json
+```json
+{
+    "scripts:{
+        "lint":"eslint \"src/**/*.{js,vue}\"" // 检查代码规范
+    },
+    "devDependencies":{
+        "@vue/eslint-config-prettier":"^6.0.0",
+        "babel-eslint":"^10.1.0",
+        "eslint":"^6.7.2",
+        "eslint-plugin-prettier":"^3.1.3",
+        "eslint-plugin-vue":"^7.0.0-0",
+        "prettier":"^1.19.1"
+    }
+}
+```
+
+添加prettier.js文件和.eslintrc.js文件（js文件能进行逻辑判断，json文件有提示。）
+
+- 测试环境搭建
+
+使用gitHook钩子，commit之前执行什么脚本，push之前执行什么脚本。
+
+- vite中使用ts
+
+下载ts包，加上lang=”ts“，引入defineComponent，获得更好的ts提示。
+就可以编写ts代码了。
+
+- vite.config.js中配置目录别名，代理，mock数据
+
+- 项目打包，部署，CI/CD
 ## 父组件获取子组件实例
 关键点：需要使用defineExpose
 
@@ -728,4 +805,185 @@ export function mountElement(vnode,container){
 ```
 
 ## 自定义渲染器
+渲染器，有一个createApp方法。
 
+main.js中
+```js
+import { createApp,createRenderer } from 'vue'
+import App from './App.vue'
+import CustomApp from './CustomApp.vue'
+import {draw,drawBarChart} from "./my-fn.js"
+createApp(App).mount('#app')
+
+const customRenderder = createRenderer({
+    // 创建元素
+    // 先创建外层元素，在创建里面的元素
+    /**
+     * 
+     * @param {string} tag 标签名
+     * @param {*} isSVG 
+     * @param {*} is 
+     * @returns 
+     */
+    createElement(tag, isSVG, is) {
+        return { tag }
+    },
+    // 插入元素
+    // 由外到里创建元素完后，在由里到外插入元素
+    /**
+     * 
+     * @param {Object} child 就是createElement函数的返回值
+     * @param {HTMLElement} parent 父元素节点
+     * @param {*} anchor 
+     */
+    insert(child, parent, anchor) {
+        console.log(child,parent,"child,parent");
+         //draw完成canvas的绘制并返回canvas元素
+         const childNode = draw(child);
+         //将canvas元素插入到div#app中
+         parent.appendChild(childNode);
+         //如果组件有绑定事件，则执行
+         if (child.onClick) {
+             childNode.addEventListener('click', () => {
+                 child.onClick();
+             })
+         }
+    },
+    // 元素属性比较
+    /**
+     * 当属性变更时触发
+     * @param {Object} el 
+     * @param {string} key 属性名
+     * @param {*} prevValue 初始值为空
+     * @param {*} nextValue 
+     */
+    patchProp(el, key, prevValue, nextValue) {
+        console.log(el,key,"el,key");
+        el[key] = nextValue;
+    },
+    remove: function (el) {
+        
+    },
+    createText: function (text) {
+        
+        return {"key":"any"}
+    },
+    createComment: function (text) {
+        
+        return {"key":"any"}
+    },
+    setText: function (node, text) {
+        
+        
+    },
+    setElementText: function (node, text) {
+        
+        
+    },
+    parentNode: function (node)  {
+        return null
+        
+    },
+    nextSibling: function (node)  {
+        return null
+    }
+})
+function createCustomApp(...args) {
+    // 传入根组件
+    const app = customRenderder.createApp(...args);
+    const {
+        mount
+    } = app;
+    // 重写mount方法，这样就可以直接传入Sting类型的id选择器了
+    app.mount = (containerOrSelector) => {
+        const container = document.querySelector(containerOrSelector);
+        container.innerHTML = ''
+        const proxy = mount(container)
+        return proxy
+    }
+    return app
+}
+
+createCustomApp(CustomApp).mount("#test")
+```
+画canvas的两个方法
+```js
+// 以下是方法
+
+/**
+ * @description: 柱状图绘制
+ * @param {*} canvas canvas元素
+ * @param {*} props 即前文的child对象，表示tag标签名和数据或者事件
+ * @return {*}
+ */
+export const drawBarChart = (canvas, props) => {
+    const width = canvas.width = window.innerWidth;
+    const height = canvas.height = window.innerHeight;
+    const OriginPos = {
+        x: 50,
+        y: 100,
+    };
+    const step = 20;
+    const ctx = canvas.getContext('2d');
+    ctx.clearRect(0, 0, width, height);
+    const {
+        data
+    } = props;
+    data.forEach((chartDatas, index) => {
+        ctx.fillStyle = chartDatas.color;
+        ctx.fillRect(OriginPos.x + step * index, OriginPos.y, 10, chartDatas.count);
+    });
+}
+/**
+ * @description: 通过传递过来的创建canvas需要的tag标签名和数据或者事件
+ * @param {*} child 一个对象，表示tag标签名和数据或者事件
+ * @return {*} canvas元素
+ */
+export const draw = (child) => {
+    let canvas;
+    if (child.tag == 'bar-chart') {
+        canvas = document.createElement('canvas');
+    }
+    drawBarChart(canvas, child);
+    return canvas;
+}
+```
+自定义的根组件
+```vue
+<script setup lang="ts">
+    import { ref } from "vue"
+    const chartData = [{
+        title: '青铜',
+        count: 200,
+        color: 'brown'
+    },
+    {
+        title: '砖石',
+        count: 300,
+        color: 'skyblue'
+    },
+    {
+        title: '王者',
+        count: 50,
+        color: 'gold'
+    },
+    ]
+    const dataRef = ref(chartData)
+    const add = () => {
+        console.log(234);
+        dataRef.value.push({
+            title: '青铜',
+            count: 200,
+            color: 'brown'
+        })
+    }
+</script>
+
+<template>
+    <bar-chart :data="dataRef" @click="add"></bar-chart>
+</template>
+
+<style>
+
+</style>
+```
