update vue essay

--- a/docs/vue/article/2022.1.31-vue2-3-essay.md
+++ b/docs/vue/article/2022.1.31-vue2-3-essay.md
@@ -987,3 +987,123 @@ export const draw = (child) => {
 
 </style>
 ```
+
+## 定义全局组件
+
+```js
+import { createApp,createRenderer, h } from 'vue'
+
+
+createApp(App).component('comp',{
+    render(){
+        return h('div','ddd')
+    }
+}).mount('#app')
+```
+
+## 函数式组件
+函数式组件变化较大，主要有以下几点：
+- 性能提升在vue3中可忽略不记，所以vue3中推荐使用状态组件
+- 函数式组件仅能通过纯函数形式声明，接收props和context两个参数
+- sfc中<template></template>不能添加functional特性声明函数是组件
+- {functional:true}组件选项移出
+
+声明一个函数式组件，Functional.js
+```js
+import {h} from 'vue'
+
+const Heading = (props,context)=>{
+    return h(`h${props.level}`,context.attrs,context.slots)
+}
+
+Heading.props = ['level']
+
+export default Heading
+```
+
+## 异步组件要求使用defineAsyncComponent方法创建
+由于vue3中函数式组件必须定义为纯函数，异步组件定义时有如下变化：
+- 必须明确使用defineAsyncComponent包裹
+- component选项重命名为loader
+- Loader函数不再接收resolve and reject且必须返回一个Promise
+
+定义一个异步组件
+```js
+import {defineAsyncComponent} from 'vue'
+// 不带配置的异步组件
+const asyncPage = defineAsyncComponent(()=>import('./NextPage.vue'))
+
+// 带配置的异步组件，loader选项是以前的component
+import ErrorComponent from '.comp/xx'
+import LoadingComponent from '.comp/xx'
+
+const asyncPageWithOptions = defineAsyncComponent({
+    loader:()=>import('./NextPage.vue'),
+    delay:200,
+    timeout:3000,
+    errorComponent:ErrorComponent,
+    loadingComponent:LoadingCOmponent
+})
+```
+
+## 自定义组件白名单
+vue3中自定义元素检测发生在模板编译时，如果要添加一些vue之外的自定义元素，需要在编译器选项中设置iscustomELement选项
+
+使用构建工具时，模板都会用vue-loader预编译，设置它提供的comilerOptions即可：vue.config.js
+```js
+rules:[
+    {
+        test:/\.vue$/,
+        use:'vue-loader',
+        options:[
+            compilerOptions:{
+                isCustomElement:tag=>tag==='plastic-button'
+            }
+        ]
+    }
+]
+```
+
+在vite.config.js中配置vueCompilerOptions即可：
+```js
+module.exports = {
+    vueCompilerOptions:{
+        isCustomElement:tag=>tag==='piechart'
+    }
+}
+```
+
+## is属性与v-is
+is属性只能用在component标签上了。
+
+dom内模板解析使用v-is代替
+
+## 自定义指令API和组件保持一致
+
+## transition类名变更
+- v-enter --》 v-enter-from
+- v-leave --》 v-leave-from
+
+## vue2、3的mount
+vue2.x应用程序根容器的outerHtml会被根组件的模板替换（或被编译为template），vue3.x现在使用跟容器的innerHTML取代。
+
+## $on,$off,$once移除
+上述三个方法被认为不应该由vue提供，因此被移除了，可以使用其他三方库实现。
+```js
+<script src="https://unpkg.com/mitt/dist/mitt.umd.js"></script>
+
+// 创建
+const emitter = mitt()
+
+// 发送
+emitter.emit('foo','ffooooo')
+
+// 监听
+emitter.on('foo',msg=>log(msg))
+```
+
+## todos案例巩固vue3特性
+
+## vue-router变化
+
+
